4.46

- Added: marked for death - player survival event at maintarget, by longtimegamer
- Added: overwatch units are allowed to move when an enemy fires a weapon nearby, by longtimegamer
- Added: For vehicles added with d_add_vec_ there is now a new setVariable for init: this setVariable ["d_empty_dist", 1000], vec will respawn if empty and players are x meters away (example here 1000)
- Fixed: AI did not occupy buildings in the TT version
- Fixed: penalty for civilian kills by artillery or CAS, by longtimegamer
- Changed: d_ai_awareness_rad, d_snp_aware, d_ai_pursue_rad, d_ai_aggressiveshoot now also work in the TT version
- Removed: House patrol (d_house_patrol), was deactivated anyway and caused too much performance issues
- Removed: Rosche version