@@ -495,6 +495,13 @@ default = 7;
 		texts[] = {"$STR_DOM_MISSIONSTRING_922","$STR_DOM_MISSIONSTRING_1007"};
 	};
 	
+	class d_del_crew_always {
+		title = "$STR_DOM_MISSIONSTRING_2062";
+		values[] = {0,1};
+		default = 1;
+		texts[] = {"$STR_DOM_MISSIONSTRING_922","$STR_DOM_MISSIONSTRING_1007"};
+	};
+	
 	class d_ao_bfires {
 		title = "$STR_DOM_MISSIONSTRING_2061";
 		values[] = {0,1};
